--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,43 +1,49 @@
-    *{
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 0;
-    }
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+}
 
-    .chart-container {
-        width: 90%;
-        max-width: 1200px;
-        margin: 20px auto;
-        padding: 30px;
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+.chart-container {
+    width: 90%;
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+.chart-container {
+    margin: 20px 0;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-    .energyChart {
-        width: 100%;
-        height: 500px;
-    }
+.energyChart {
+    width: 100%;
+    height: 500px;
+}
 
-    header{
-        background-color: #6EAB45;
-        color: white;
-    }
+header {
+    background-color: #6eab45;
+    color: white;
+}
 
-    article{
-        background-color: #B5DC9A;
-    }
+article {
+    background-color: #b5dc9a;
+}
 
-    #logout{
-        border: 1px solid black;
-        border-radius: 6px;
-        background-color: #FAE527;
-        text-decoration: none;
-        color: black;
-        float: right;
-        margin-top: 0lh;
-        padding: 0;
-        height: 30px;
-        width: 70px;
-        text-align: center;
-
-    }
+#logout {
+    border: 1px solid black;
+    border-radius: 6px;
+    background-color: #fae527;
+    text-decoration: none;
+    color: black;
+    float: right;
+    margin-top: 0lh;
+    padding: 0;
+    height: 30px;
+    width: 70px;
+    text-align: center;
+}
